Added some additional file structure

--- a/client/src/components/LoginModal/index.scss
+++ b/client/src/components/LoginModal/index.scss
@@ -2,6 +2,10 @@
     width: 20rem;
     text-align: center;
 
+    &__toggle-container {
+        padding-bottom: 1rem;
+    }
+
     &__toggle-button {
         outline: none;
         border: none;
