--- a/client/src/components/Common/Modal/index.scss
+++ b/client/src/components/Common/Modal/index.scss
@@ -1,6 +1,20 @@
-.modal {
+@import '../../../../styles/variables';
+
+.modal-overlay {
     z-index: 100;
-    margin: 2rem auto 0;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: $modal-overlay-color;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.modal {
+    margin-top: 2rem;
     padding: 1rem 2rem;
     box-shadow: 0 2px 10px black;
+    background-color: $modal-color;
 }
