Added initial redux store details

--- a/client/src/components/Layout/index.scss
+++ b/client/src/components/Layout/index.scss
@@ -3,6 +3,6 @@
         margin-top: 4.1rem;
         min-height: calc(100vh - 4.1rem);
         display: flex;
-        align-items: center;
+        justify-content: center;
     }
 }
