Updated notes table and styling

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -5,9 +5,11 @@ $modal-overlay-color: #222222ee;
 
 $clear-color: #00000000;
 
-// Helper Variables ----------------------------/
-$dark-color-list: "blue", "black", "purple";
-
-$light-color-list: "white", "green", "yellow", "orange", "red";
-
-$color-list: join($dark-color-list, $light-color-list);
+// Breakpoints --------------------------/
+$screen-size-sm-min: 320px;
+$screen-size-sm-max: 480px;
+$screen-size-md-min: $screen-size-sm-max + 1;
+$screen-size-md-max: 768px;
+$screen-size-lg-min: $screen-size-md-max + 1;
+$screen-size-lg-max: 1024px;
+$screen-size-xl-min: $screen-size-lg-max + 1;
