--- a/client/src/components/Common/SearchBar/index.scss
+++ b/client/src/components/Common/SearchBar/index.scss
@@ -1,20 +1,21 @@
 @import '../../../../styles/variables';
 @import '../../../../styles/mixins';
 
-.note-search {
-    display: flex;
-    justify-content: center;
-
-    &__search-bar {
-        background-color: $body-color;
-        border-radius: 5px;
-        padding-left: 0.2rem;
-    }
+.search-bar {
+    background-color: $body-color;
+    border-radius: 5px;
+    padding-left: 0.2rem;
 
     &__input {
         @include no-outline-or-border(true);
         padding: 0.3rem 0.2rem;
         width: 20rem;
+        background-color: $clear-color;
+    }
+
+    &__clear-button {
+        @include no-outline-or-border();
+        color: red;
         background-color: $clear-color;
     }
 
