--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -1,4 +1,7 @@
+@import '../../../styles/mixins';
+
 .header {
+    @include dark-shadow(5px);
     position: fixed;
     top: 0;
     width: 100%;
@@ -6,18 +9,15 @@
     height: 2.5rem;
     line-height: 2.5rem;
     display: flex;
-    box-shadow: 0 2px 5px black;
     z-index: 10;
 
     &__title {
-        text-align: center;
         flex-grow: 1;
         margin: 0;
     }
 
     &__logout-button {
-        outline: none;
-        border: none;
+        @include no-outline-or-border();
         background-color: red;
         color: white;
         width: 5rem;
