--- a/client/src/components/LoginModal/LoginModalSwitch/index.scss
+++ b/client/src/components/LoginModal/LoginModalSwitch/index.scss
@@ -1,9 +1,10 @@
+@import '../../../../styles/mixins';
+
 .login-modal-switch {
     padding-bottom: 1rem;
 
     &__button {
-        outline: none;
-        border: none;
+        @include no-outline-or-border();
         background-color: inherit;
         font-size: 12px;
         color: darkred;
