--- a/client/src/components/NotesContainer/Note/index.scss
+++ b/client/src/components/NotesContainer/Note/index.scss
@@ -1,11 +1,28 @@
+@import '../../../../styles/mixins';
+
 .note {
     min-height: 10rem;
     padding: 0.8rem;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
 
     &__title {
         margin: 0;
         font-size: 1.5rem;
-        text-align: center;
+    }
+
+    &__description {
+        flex-grow: 1;
+    }
+
+    &__button-row {
+        & > button {
+            @include no-outline-or-border();
+            float: right;
+            background-color: inherit;
+            color: inherit;
+        }
     }
 }
