--- a/client/src/components/NotesContainer/NoteTable/index.scss
+++ b/client/src/components/NotesContainer/NoteTable/index.scss
@@ -1,10 +1,23 @@
+@import '../../../../styles/mixins';
+
 .note-table {
-    display: grid;
     box-sizing: border-box;
+    padding: 1rem;
     width: 100%;
-    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     column-gap: 0.4rem;
     row-gap: 0.4rem;
-    padding: 1rem;
+
+    @include breakpoint (mobile) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    @include breakpoint (tablet) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @include breakpoint (desktop) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
 }
