--- a/client/src/components/Common/SearchBar/index.scss
+++ b/client/src/components/Common/SearchBar/index.scss
@@ -3,26 +3,30 @@
 
 .search-bar {
     background-color: $body-color;
-    border-radius: 5px;
+    border-radius: 10px;
+    border: 1px solid gray;
     padding-left: 0.2rem;
+    display: flex;
+    justify-content: stretch;
+    box-sizing: border-box;
 
     &__input {
         @include no-outline-or-border(true);
         padding: 0.3rem 0.2rem;
-        width: 20rem;
+        flex-grow: 1;
         background-color: $clear-color;
     }
 
     &__clear-button {
         @include no-outline-or-border();
-        color: red;
         background-color: $clear-color;
+        color: gray;
     }
 
     &__search-button {
         @include no-outline-or-border();
         @include right-side-border-radius(5px);
-        padding: 0.3rem 0.5rem;
         background-color: $clear-color;
+        color: gray;
     }
 }
