--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -11,6 +11,17 @@
     display: flex;
     z-index: 10;
 
+    hr {
+        margin: -0.6rem 0;
+    }
+
+    &__add-note-button {
+        @include no-outline-or-border();
+        padding: 0 0.5rem;
+        margin-left: 1rem;
+        font-size: 1.5rem;
+    }
+
     &__title {
         flex-grow: 1;
         margin: 0;
@@ -22,7 +33,7 @@
         color: white;
         width: 5rem;
         border-radius: 16px;
-        padding: 0rem 0.5rem;
+        padding: 0 0.5rem;
         margin: 0.1rem 1rem 0.1rem 0;
     }
 }
