--- a/client/src/components/NotesContainer/NoteTable/index.scss
+++ b/client/src/components/NotesContainer/NoteTable/index.scss
@@ -5,19 +5,18 @@
     padding: 1rem;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: auto;
     column-gap: 0.4rem;
     row-gap: 0.4rem;
 
-    @include breakpoint (mobile) {
-        grid-template-columns: repeat(1, 1fr);
-    }
     @include breakpoint (tablet) {
         grid-template-columns: repeat(2, 1fr);
     }
     @include breakpoint (desktop) {
         grid-template-columns: repeat(3, 1fr);
     }
-    
+    @include breakpoint (large) {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
