--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/variables';
 @import '../../../styles/mixins';
 
 .header {
@@ -17,6 +18,7 @@
 
     &__add-note-button {
         @include no-outline-or-border();
+        @include colored-button($body-color);
         padding: 0 0.5rem;
         margin-left: 1rem;
         font-size: 1.5rem;
@@ -29,7 +31,7 @@
 
     &__logout-button {
         @include no-outline-or-border();
-        background-color: red;
+        @include colored-button(red);
         color: white;
         width: 5rem;
         border-radius: 16px;
