Added some backend and notes changes

--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -3,6 +3,7 @@
 
 .header {
     @include dark-shadow(5px);
+    background-color: $body-color;
     position: fixed;
     top: 0;
     width: 100%;
