--- a/client/styles/base/_base.scss
+++ b/client/styles/base/_base.scss
@@ -7,7 +7,14 @@ body {
 }
 
 input {
+    box-sizing: border-box;
     font-size: inherit;
+}
+
+textarea {
+    box-sizing: border-box;
+    font-size: inherit;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
