--- a/client/src/components/NoteModal/NoteForm/index.scss
+++ b/client/src/components/NoteModal/NoteForm/index.scss
@@ -9,6 +9,7 @@
         padding: 0.3rem 0.4rem;
         margin-bottom: 0.5rem;
         background-color: $clear-color;
+        color: inherit;
     }
 
     &__content {
@@ -18,5 +19,6 @@
         padding: 0.3rem 0.4rem;
         resize: none;
         background-color: $clear-color;
+        color: inherit;
     }
 }
