Updated color changes to be important, may change later

--- a/client/styles/base/_base.scss
+++ b/client/styles/base/_base.scss
@@ -17,6 +17,10 @@ textarea {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+pre {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 button {
     font-size: inherit;
     cursor: pointer;
