--- a/client/styles/_mixins.scss
+++ b/client/styles/_mixins.scss
@@ -34,11 +34,20 @@ $breakpoints: (
 @mixin colored-button($color) {
     background-color: $color;
 
-    &:focus {
+    &:hover {
         background-color: darken($color, 15);
     }
 }
 
+@mixin top-border-radius($radius) {
+    border-top-right-radius: $radius;
+    border-top-left-radius: $radius;
+}
+
+@mixin bottom-border-radius($radius) {
+    border-bottom-left-radius: $radius;
+    border-bottom-right-radius: $radius;
+}
 
 @mixin right-side-border-radius($radius) {
     border-top-right-radius: $radius;
