Added loading settings and fixed search bar

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -2,6 +2,8 @@
 $body-color: #eee;
 $modal-color: #eee;
 $modal-overlay-color: #222222ee;
+$loading-overlay-color: #eeeeee88;
+$loading-segment-color: #202047;
 
 $clear-color: #00000000;
 
