--- a/client/src/components/Common/Loading/index.scss
+++ b/client/src/components/Common/Loading/index.scss
@@ -16,6 +16,9 @@
     height: 100vh;
     z-index: 1000;
     background-color: $loading-overlay-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &__spinner {
         display: inline-block;
